--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- Header -->
   <header class="masthead" >
     <div class="overlay"></div>
-    <div class="container" style="max-height: 600px;">
+    <div class="container">
       <div class="row"  >
     
           <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" id="carrusel">
