--- a/sectores/farmaceutico/index.html
+++ b/sectores/farmaceutico/index.html
@@ -117,44 +117,44 @@
         <!-- beneficios -->
         <div class="grilla">
           <div class="beneficio1">
-            Superficies asépticas. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="90" height="115"alt="aseptico">
+            <p>Superficies asépticas.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="100" height="100"alt="aseptico">
           </div>
           <div class="beneficio2">
-            Resistente a químicos de limpieza. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="90" height="90" alt="limpieza"> 
+            <p>Resistente a químicos de limpieza.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="100" height="100" alt="limpieza"> 
           </div>
           <div class="beneficio3">
-            Superficie Resistente al Moho.
-            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90"alt="moho">
+            <p>Superficie Resistente al Moho.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="100" height="100"alt="moho">
           </div>
           <div class="beneficio4">
-            Excelentes propiedades térmicas y reflectividad lumínica. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="90" height="90" alt="moho">
+            <p>Excelentes propiedades térmicas y reflectividad lumínica.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="100" height="100" alt="moho">
           </div>
           <div class="beneficio5">
-            Excelente acabado. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente acabado">
+            <p>Excelente acabado.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="100" height="100" alt="excelente acabado">
           </div>
           <div class="beneficio6">
-            Aislante acústico. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante acustico">
+            <p>Aislante acústico.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="100" height="100" alt="aislante acustico">
           </div>
           <div class="beneficio7">
-            Bajo costo de mantenimiento.
-            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"alt="bajo mantenimiento">
+            <p>Bajo costo de mantenimiento.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="100" height="100"alt="bajo mantenimiento">
           </div>
           <div class="beneficio8">
-            Ignífugo y autoextinguidle. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90"alt="ignifugo autoextinguible">
+            <p>Ignífugo y autoextinguidle.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="100" height="100"alt="ignifugo autoextinguible">
           </div>
           <div class="beneficio9">
-            Norma Sismo-resistente.
-            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo resistente">
+            <p>Norma Sismo-resistente.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="100" height="100" alt="sismo resistente">
           </div>
           <div class="beneficio10">
-            Código Sanitario. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90"alt="codigo sanitario">
+            <p>Código Sanitario.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="100" height="100"alt="codigo sanitario">
           </div>
         </div>
       </div>
