--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -126,48 +126,48 @@
           </p>  
           <div class="grilla">
             <div class="beneficio1">
-              Ambiente de cultivo optimizado (Temperatura y Humedad). <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="90" height="90" alt="temperatura">
+              <p>Ambiente de cultivo optimizado (Temperatura y Humedad).</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="100" height="100" alt="temperatura">
             </div>
             <div class="beneficio2">
-              Superficie Resistente al Moho.
-              <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90" alt="humedad"> 
+              <p>Superficie Resistente al Moho.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="100" height="100" alt="humedad"> 
             </div>
             <div class="beneficio3">
-              Excelentes propiedades térmicas y reflectividad lumínica. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="90" height="90" alt="propiedades-termicas">
+              <p>Excelentes propiedades térmicas y reflectividad lumínica.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="100" height="100" alt="propiedades-termicas">
             </div>
             <div class="beneficio4">
-              Durabilidad y resistencia. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="90" height="90" alt="durabilidad-resistencia">
+              <p>Durabilidad y resistencia.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="100" height="100" alt="durabilidad-resistencia">
             </div>
             <div class="beneficio5">
-              Aislante acústico. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante-termico">
+              <p>Aislante acústico.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="100" height="90" alt="aislante-termico">
             </div>
             <div class="beneficio6">
-              Excelente acabado. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente-acabado">
+              <p>Excelente acabado.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="100" height="100" alt="excelente-acabado">
             </div>
             <div class="beneficio7">
-              Rapidez de construcción. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90" alt="rapidez-construccion">
+              <p>Rapidez de construcción.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="100" height="100" alt="rapidez-construccion">
             </div>
             <div class="beneficio8">
-              Ignífugo y autoextinguidle. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90" alt="ignifico-autoextinguible">
+              <p>Ignífugo y autoextinguidle.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="100" height="100" alt="ignifico-autoextinguible">
             </div>
             <div class="beneficio9">
-              Desmontable - reutilizable.
-              <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="90" height="90" alt="reutilizable">
+              <p>Desmontable - reutilizable.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="100" height="100" alt="reutilizable">
             </div>
             <div class="beneficio10">
-              Norma Sismo-resistente.
-              <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo-resistentes">
+              <p>Norma Sismo-resistente.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="100" height="100" alt="sismo-resistentes">
             </div>
             <div class="beneficio11">
-              Código Sanitario. <br>
-              <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90"  alt="codigo-sanitario">
+              <p>Código Sanitario.</p>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="100" height="100"  alt="codigo-sanitario">
             </div>
           </div>
       </div>
