--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -126,52 +126,52 @@
         <!-- beneficios -->
         <div class="grilla">
           <div class="beneficio1">
-            Altamente Aséptico. <br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="90" height="90"  alt="aseptico">
+            <p>Altamente Aséptico.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="100" height="100"  alt="aseptico">
           </div>
           <div class="beneficio2">
-            Resistente a químicos agresivos y corrosivos.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="90 " height="90" alt="resistente-corrosión"> 
+            <p>Resistente a químicos agresivos y corrosivos.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="100 " height="100" alt="resistente-corrosión"> 
           </div>
           <div class="beneficio3">
-            Espacios libres de humedad.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90" alt="humedad">
+            <p>Espacios libres de humedad.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="100" height="100" alt="humedad">
           </div>
           <div class="beneficio4">
-            Superficies fáciles de limpiar y desinfectar.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="90" height="90" alt="limpieza">
+            <p>Superficies fáciles de limpiar y desinfectar.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="100" height="100" alt="limpieza">
           </div>
           <div class="beneficio5">
-            Espacios y habitaciones confortables.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="90" height="90" alt="confort">
+            <p>Espacios y habitaciones confortables.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="100" height="100" alt="confort">
           </div>
           <div class="beneficio6">
-            Aislante térmico y acústico.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante termico">
+            <p>Aislante térmico y acústico.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="100" height="100" alt="aislante termico">
           </div>
           <div class="beneficio7">
-            Excelente acabado.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90"  alt="excelente acabado">
+            <p>Excelente acabado.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="100" height="100"  alt="excelente acabado">
           </div>
           <div class="beneficio8">
-            Rapidez de construcción.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90" alt="rapidez construcción">
+            <p>Rapidez de construcción.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="100" height="100" alt="rapidez construcción">
           </div>
           <div class="beneficio9">
-            Bajo costo de mantenimiento.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"  alt="bajo costo">
+            <p>Bajo costo de mantenimiento.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="100" height="100"  alt="bajo costo">
           </div>
           <div class="beneficio10">
-            Ignífugo y autoextinguidle.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90"  alt="ignifugo-autoextinguible">
+            <p>Ignífugo y autoextinguidle.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="100" height="100"  alt="ignifugo-autoextinguible">
           </div>
           <div class="beneficio11">
-            Norma Sismo-resistente.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo-resistente">
+            <p>Norma Sismo-resistente.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="100" height="100" alt="sismo-resistente">
           </div>
           <div class="beneficio12">
-            Código Sanitario.<br>
-            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90" alt="codigo-sanitario">
+            <p>Código Sanitario.</p>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="100" height="100" alt="codigo-sanitario">
           </div>
         </div>
 
