--- a/index.html
+++ b/index.html
@@ -85,57 +85,55 @@
   <!-- Header -->
   <header class="masthead" >
     <div class="overlay"></div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" id="carrusel">
+      <ol class="carousel-indicators" >
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner" >
+        <div class="carousel-item active" style="max-height: 800px;">
+          <img src="img/Inicio/campamentos-pvc.jpg" class="d-block w-100" alt="campamentos prefabricados" style="opacity: 0.7;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="letrasInicio">Construcciones prefabricadas</h3>
+            <p class="letrasInicio">Ahorre tiempo en el proyecto, disimuya riesgos en la obra, optimice sus recuros...</p>
+          </div>
+        </div>
+        <div class="carousel-item" style="max-height: 800px; ">
+          <img src="img/Inicio/vivienda-pvc-2.jpg" class="d-block w-100" alt="viviendas prefabricadas" style="opacity: 0.7;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="letrasInicio">Casas con panales de PVC</h3>
+            <p class="letrasInicio">Ambientes con gran confort, construcciones limpias y resistentes...</p>
+          </div>
+        </div>
+        <div class="carousel-item" style="max-height: 800px; ">
+          <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="consultorios-asepticos" style="opacity: 0.7;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="letrasInicio">Laboratorios y hospitales prefabricados</h3>
+            <p class="letrasInicio">Asépticos y de fácil higiene, cumpliendo normativa...</p>
+          </div>
+        </div> 
+        <div class="carousel-item" style="max-height: 800px; ">
+          <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="cerramientos seguros" style="opacity: 0.7;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="letrasInicio">Armonizar con el ambiente</h3>
+            <p class="letrasInicio">Nuestros diseños buscan cumplir con las espectativas del cliente...</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
     <div class="container">
       <div class="row"  >
-    
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" id="carrusel">
-            <ol class="carousel-indicators" >
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner" >
-              <div class="carousel-item active" style="max-height: 600px;">
-                <img src="img/Inicio/campamentos-pvc.jpg" class="d-block w-100" alt="campamentos prefabricados">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3 class="letrasInicio">Construcciones prefabricadas</h3>
-                  <p class="letrasInicio">Ahorre tiempo en el proyecto, disimuya riesgos en la obra, optimice sus recuros...</p>
-                </div>
-              </div>
-              <div class="carousel-item" style="max-height: 600px;">
-                <img src="img/Inicio/vivienda-pvc-2.jpg" class="d-block w-100" alt="viviendas prefabricadas">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3 class="letrasInicio">Casas con panales de PVC</h3>
-                  <p class="letrasInicio">Ambientes con gran confort, construcciones limpias y resistentes...</p>
-                </div>
-              </div>
-              <div class="carousel-item" style="max-height: 600px;">
-                <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="consultorios-asepticos">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3 class="letrasInicio">Laboratorios y hospitales prefabricados</h3>
-                  <p class="letrasInicio">Asépticos y de fácil higiene, cumpliendo normativa...</p>
-                </div>
-              </div> 
-              <div class="carousel-item" style="max-height: 600px;">
-                <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="cerramientos seguros">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3 class="letrasInicio">Armonizar con el ambiente</h3>
-                  <p class="letrasInicio">Nuestros diseños buscan cumplir con las espectativas del cliente...</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
 
-        </div>
       </div>
     </div>
   </header>
