--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">     
-            <div  class="container" style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
+            <div  class="container" style="margin-top: 2em; margin-bottom: 2em; text-align:center;">
               <h2>Intro a Paneles en PVC</h2>
             </div>
             <!-- inclusión de video -->
@@ -151,7 +151,7 @@
             </div>  
         </div>
         <div>
-          <div style="margin-top: 5%; margin-bottom: 5%; text-align:center;">
+          <div style="margin-top: 2em; margin-bottom: 2em; text-align:center;">
             <h2>Nuestro alcance</h2>
           </div>
           <div class="card-deck">
@@ -174,15 +174,15 @@
               <img src="img/Inicio/bodega.JPG" class="card-img-top" alt="bodegas pvc">
               <div class="card-body">
                 <h5 class="card-title">Cubiertas y Cerramientos para Bodegas</h5>
-                <p class="card-text">Con nuestra experiencia en el uso de paneles en PVC le ayudamos a implementar cerramientos en PVC con propiedades: <b>termoacústicas, resistentes al medio abiente, ignifugo, sismo resistente</b></p>
+                <p class="card-text">Con nuestra experiencia en el uso de paneles en PVC le ayudamos a implementar cerramientos en PVC con propiedades: <b>termoacústicas, resistentes al medio ambiente, ignífugo, sismo resistente</b></p>
               </div>
             </div>
 
           </div>
         </div>
-            <br><hr><br>
-        <div>
-          <div style="margin-top: 5%; margin-bottom: 5%; text-align: center;">
+
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div style="margin-top: 2.5em; margin-bottom: 2em; text-align: center;">
             <h2>Nuestros Clientes</h2>
           </div>    
           <!-- carrusel de clientes -->
@@ -232,8 +232,10 @@
 
 
 <!-- pie de pagina -->
-<div id="wapp">
-  <img src="img/iconwhatsapp.png" alt="" style="width: 60px; height:60px">
+<a href="https://api.whatsapp.com/send?phone=573002188416&text=Hola%21%20por%20favor%20contactarme."  target="_blank">
+    <i class=" my-float"></i>
+    <img class="float" src="img/iconwhatsapp.png" alt="whatsapp">
+</a>
 </div>
   <footer>
     <div class="container">
