--- a/contacto/index.html
+++ b/contacto/index.html
@@ -17,7 +17,7 @@
   <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <!-- Custom styles for this template -->
   <link href="../css/clean-blog.css" rel="stylesheet">   
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
@@ -32,7 +32,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="../index.html">Inicio</a>
+      <a class="navbar-brand" href="../index.html">
+        <img id="inicioLogo" src="../img/logo AMVIESTRUC SAS.png" alt="amviestruc">      
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
