--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   <!-- Menus de navegación -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Inicio</a>
+        
+        <a class="navbar-brand" href="index.html">
+          <img id="inicioLogo" src="img/logo AMVIESTRUC SAS.png" alt="amviestruc">
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -143,7 +146,9 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">     
             <div  class="container" style="margin-top: 2em; margin-bottom: 2em; text-align:center;">
-              <h2>Intro a Paneles en PVC</h2>
+              <h3>Construcciones óptimas</h3>
+              <br>
+              <h3>Intro al sistema con paneles en PVC</h3>
             </div>
             <!-- inclusión de video -->
             <div class="container">
@@ -152,7 +157,7 @@
         </div>
         <div>
           <div style="margin-top: 2em; margin-bottom: 2em; text-align:center;">
-            <h2>Nuestro alcance</h2>
+            <h3>Nuestro alcance</h3>
           </div>
           <div class="card-deck">
 
@@ -183,7 +188,7 @@
 
         <div class="col-lg-8 col-md-10 mx-auto">
           <div style="margin-top: 2.5em; margin-bottom: 2em; text-align: center;">
-            <h2>Nuestros Clientes</h2>
+            <h3>Nuestros Clientes</h3>
           </div>    
           <!-- carrusel de clientes -->
           <div id="content" class="col-lg-12">
