--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
@@ -34,7 +35,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="../index.html">Inicio</a>
+      <a class="navbar-brand" href="../index.html">
+        <img id="inicioLogo" src="../img/logo AMVIESTRUC SAS.png" alt="amviestruc">
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
