--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="css/clean-blog.css" rel="stylesheet">
 
   <!-- icono para la pagina -->
-  <link rel="icon" type="image/png" href="img/logo AMVIESTRUC SAS.png">
+  <link rel="icon" type="image/png" href="img/logo AMVIESTRUC sas logo.png">
 
 </head>
 
@@ -39,7 +39,7 @@
     <div class="container">
         
         <a class="navbar-brand" href="index.html">
-          <img id="inicioLogo" src="img/logo AMVIESTRUC SAS.png" alt="amviestruc">
+          <img id="inicioLogo" src="img/logo AMVIESTRUC SAS inicio.png" alt="amviestruc">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
