--- a/sectores/alimentos-bebidas/index.html
+++ b/sectores/alimentos-bebidas/index.html
@@ -38,7 +38,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand" href="../../index.html">
-          <img id="inicioLogo" src="../../img/logo AMVIESTRUC SAS.png" alt="amviestruc">
+          <img id="inicioLogo" src="../../img/logo AMVIESTRUC SAS inicio.png" alt="amviestruc">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
