--- a/soluciones/index.html
+++ b/soluciones/index.html
@@ -21,7 +21,7 @@
   <!-- Custom styles for this template -->
   <link href="../css/clean-blog.css" rel="stylesheet">
   <!-- icono para la pagina -->
-  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC sas logo.png">
     <!-- uso de las metas -->
     <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="../index.html">
-        <img id="inicioLogo" src="../img/logo AMVIESTRUC SAS.png" alt="amviestruc">
+        <img id="inicioLogo" src="../img/logo AMVIESTRUC SAS inicio.png" alt="amviestruc">
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
